[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-lscache"
version = "0.1.0"
description = "LiteSpeed Cache integration for Django"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
keywords = ["lscache","cache","django"]

authors = [
  { name = "Cold Egg" }
]

dependencies = [
  "Django>=3.2",
  "requests>=2.25"
]

classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Code-Egg/django-lscache"
Documentation = "https://github.com/Code-Egg/django-lscache"
Issues = "https://github.com/Code-Egg/django-lscache/issues"

[tool.setuptools.packages.find]
where = ["src"]
